# seam-carving

./: .gitignore  README.md  profile_main.py  pyproject.toml  seam_carve.py
examples/: README.md  advanced_seam_carving.py  download_sample_image.py  performance_optimization.py  test_seam_carving.py
python/seam_carving/: __main__.py  cli.py  seam_carving.py
rust_bindings/: Cargo.toml
rust_bindings/src/: lib.rs
src/seam_carving/: __init__.py  cli.py  seam_carving.py  utils.py
tests/: test_seam_carving.py
